inc spacing bt sections, fix spotify space

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -272,7 +272,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 50px;
+    padding-top: 65px;
 }
 
 .latest-section {
